# RnV

./: .gitignore  .pylintrc  README.md  REUSE.toml  pyproject.toml
recipes/: train_syllable_rhythm_model.py  train_urhythmic_rhythm_model.py  train_urhythmic_segmenter.py
rnv/: converter.py  utils.py
rnv/rhythm/syllable/: segment_syllables.py  syllable_converter.py  syllable_segmenter.py
rnv/rhythm/urhythmic/: model.py  rhythm_model.py  segmenter.py  utils.py
rnv/ssl/: models.py
rnv/ssl/WavLM/: WavLM.py  modules.py
rnv/vc/: knn.py
rnv/vocoder/: models.py
rnv/vocoder/hifigan/: models.py  utils.py
scripts/: extract_dataset_embeddings.py  preprocess_speech_data.py  preprocess_torgo.py
