# SPDX-FileCopyrightText: 2024 Idiap Research Institute
# SPDX-FileContributor: Karl El Hajal
#
# SPDX-License-Identifier: GPL-3.0-only

[project]
name = "rnv"
version = "0.1.0"
description = ""
authors = [{name = "Karl ELHAJAL", email = "karl.elhajal@idiap.ch"}]
readme = "README.md"
requires-python = ">=3.11,<3.13"
dependencies = [
    "torch (>=2.3.1,<3.0.0)",
    "torchaudio (>=2.6.0,<3.0.0)",
    "numpy (>=2.2.4,<3.0.0)",
    "scipy (>=1.15.2,<2.0.0)",
    "librosa (>=0.11.0,<0.12.0)",
    "webrtcvad (>=2.0.10,<3.0.0)",
    "setuptools (>=80.9.0,<81.0.0)",  # needed for webrtcvad
    "tqdm (>=4.67.1,<5.0.0)",
    "gammatone (>=1.0.3,<2.0.0)",
    "pydub (>=0.25.1,<0.26.0)",
]


[tool.poetry]
requires-poetry = ">=2.0"

[tool.poetry.group.dev.dependencies]
reuse = "^4.0.3"
pre-commit = "^3.7.1"
ruff = ">=0.9.3"
pylint = "^3.2.7"


[build-system]
requires = ["poetry-core (>=2.0)"]
build-backend = "poetry.core.masonry.api"

[tool.ruff]
target-version = "py311"
line-length = 200

[tool.ruff.lint]
select = ["E", "F", "W", "I", "Q"]
ignore = ["E501", "E741"]

[tool.ruff.format]
exclude = ["E501"]
